--- a/.github/workflows/prod.workflow.yml
+++ b/.github/workflows/prod.workflow.yml
@@ -31,13 +31,13 @@ jobs:
      
     - name: Build and push container image to registry 
       run: |
-        docker build . -t mlopscd5.azurecr.io/mlops-cd:${{ github.sha }}
+        docker build . -t mlopscd5.azurecr.io/mlops-cd5:${{ github.sha }}
         docker push mlopscd5.azurecr.io/mlops-cd:${{ github.sha }}
         
         
     - name: Deploy to App Service
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'mlops-cd'
+        app-name: 'mlops-cd5'
         images: 'mlopscd5.azurecr.io/mlops-cd:${{ github.sha }}'
         slot-name: 'staging'
